--- a/src/styles.css
+++ b/src/styles.css
@@ -82,12 +82,16 @@ body, html {
 .sidebar {
   background-color: #285c4d;
   padding: 10px;
-  height: 100vh;
   width: 200px;
+  height: 80%;
+  margin-top: 10vh;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+  border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
   display: flex;
   flex-direction: column;
   position: fixed;
-  top: 40px;
 }
 
 .sidebar button {
