--- a/src/styles.css
+++ b/src/styles.css
@@ -73,9 +73,10 @@ body, html {
   position: absolute;
   left: 0;
   right: 0;
-  bottom: -9.5px;
-  height: 2px;
+  bottom: -31%;
+  height: 3px;
   background-color: white;
+  border-radius: 10px;
 }
 
 /* Sidebar Styles */
