--- a/src/styles.css
+++ b/src/styles.css
@@ -38,7 +38,7 @@ body, html {
   font-weight: bold;
   color: white;
   box-shadow: 0 3px 7px rgba(0, 0, 0, 0.377);
-  position: fixed; 
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -132,6 +132,7 @@ body, html {
   flex-direction: column;
   align-items: center;
   justify-content: start;
+  text-align: justify;
 }
 
 .main-title {
